maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:3: error: not found: value xMax
  for (x <- 0 to xMax) {
                 ^JediEscaper:4: error: not found: value yMax
    for (y <- 0 to yMax) {
                   ^